--- a/index.html
+++ b/index.html
@@ -122,10 +122,27 @@
       </section>
       <section class="fifth">
         <div class="fifth-container">
-          <h1>What we provide</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In urna, non nisl tincidunt ut elementum turpis.</p>
+          <h1 class="fifth-container_h1">What we provide</h1>
+          <p class="fifth-container_p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In urna, non nisl tincidunt ut elementum turpis.</p>
           <div class="fifth-container_flex">
-            
+            <div class="fifth-container_flex1">
+              <img src="images/Group1.svg" alt="advert">
+              <h1>Social advertising</h1>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In urna, non nisl tincidunt.</p>
+              <a href="#">learn more</a>
+            </div>
+            <div class="fifth-container_flex2">
+              <img src="images/mentorship.svg" alt="mentorship">
+              <h1>Partnership Management</h1>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In urna, non nisl tincidunt.</p>
+              <a href="#">learn more</a>
+            </div>
+            <div class="fifth-container_flex3">
+              <img src="images/content.svg" alt="content">
+              <h1>Content Creations</h1>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In urna, non nisl tincidunt.</p>
+              <a href="#">learn more</a>
+            </div>
           </div>
         </div>
       </section>
